--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,16 @@
                                   <version>3.1</version>
                                   <configuration>
                                        <fork>true</fork>
-                                        <executable>C:\Program Files\Java\jdk1.8.0_202\bin\javac.exe</executable>
+                                        <executable>C:\Program Files\Java\jdk1.8.0_301\bin\javac.exe</executable>
                                   </configuration>
                            </plugin>  
+                          <plugin>
+                               <artifactId>maven-war-plugin</artifactId>
+                               <version>2.4</version>
+                               <configuration>
+                                   <failOnMissingWebXml>false</failOnMissingWebXml>
+                               </configuration>
+                           </plugin>
                  </plugins>
                   
          </pluginManagement>
